...
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_search">Search Item</string>
    <string name="nav_list">List Item</string>
    <string name="nav_trade">Trade Item</string>
    <string name="nav_rental">My Rentals</string>
    <string name="nav_inventory">My Inventory</string>
    <string name="nav_inbox">My Inbox</string>
    <string name="nav_account">My Account</string>
    <string name="nav_claim">My Claims</string>
...
